--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -96,7 +96,7 @@ A related issue arises when Blockchain processes and smart contracts need to use
 \subsection{Security}
 Due to its decentralized nature, Blockchain is potentially vulnerable to a number of security threats.  First, coordinated attacks by a majority (or often even a large minority) of the miners can reorder, remove, and change transactions from the ledger. Thus, it is critical that Blockchain applications provide the proper incentives to keep miners honest.  In particular, it is critical to design incentives such that the game theoretic behavior for selfish miners is to honestly maintain the state of the Blockchain system rather than to destroy it through forming such coalitions.
 
-Additionally, Blockchain technology is vulnerable to traditional network attacks such as denial of service or partitioning.  Such attacks can aim to lower the number of participating miners or to fracture the network of miners in order to prevent consensus, lower the bar for 51\% attacks, or create an inconsistent state.
+Additionally, Blockchain technology is vulnerable to traditional network attacks such as denial of service or partitioning.  Such attacks can aim to lower the number of participating miners or to fracture the network of miners to prevent consensus, lower the bar for 51\% attacks, or create an inconsistent state.
 
 \subsection{Privacy and anonymity}
 Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.  By default, all data on the ledger is public in order to enable verification by all miners.  But this means that any sensitive data is inherently non-private. If confidentiality is needed, it will be necessary to either host a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that will allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption). Still, the use of cryptography will limit the auditability and thus the ability to have meaningful shared governance.
@@ -113,7 +113,7 @@ Another major challenge of some Blockchain systems is that the require users to 
 %With a key management solution in place, a further challenge is obtaining transactions for auditing purposes---auditing is a much touted capability of blockchain across our dataset. In a decentralized environment, running a full node on the network, or relying on a entity that does (such as a blockchain explorer website or a lightweight user-client) is necessary. 
 
 \subsection{Legality and Regulation}
-Our analysis revealed wide-spread concern with regulatory issues surrounding cryptocurrencies, Blockchain-based assets, and other Blockchain applications. It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations. Therefore there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians. In most countries, each of these already broad categories are administered by different government branches. Countries like the United States and Canada may require licensing or registration, and have taken enforcement action against non-compliant firms.
+Our analysis revealed wide-spread concern with regulatory issues surrounding cryptocurrencies, Blockchain-based assets, and other Blockchain applications. It is important to note that regulation applies indirectly to technology, based on how the technology is used within a firm's operations. Therefore, there will be no direct regulation of Bitcoin, for example, but rather regulation of firms that use Bitcoin according to how they are using it. Consider the example of a Bitcoin exchange service that derives income from fees paid in Bitcoin: it will have to consider tax declarations as a business (\eg service taxes and capital gains), financial reporting as a money service business (\eg know your customer, anti-money laundering and anti-terrorist financing), generally acceptable accounting standards for audited financial reports (\eg reporting Bitcoin as an intangible asset on a balance sheet), and potentially additional regulation that applies to financial exchanges, banks, and/or custodians. In most countries, each of these already broad categories are administered by different government branches. Countries like the United States and Canada may require licensing or registration and have taken enforcement action against non-compliant firms.
 
 An extreme case of regulation is prohibition of cryptocurrencies or Blockchain-assets. At the time of writing, the largest country to ban Bitcoin is Pakistan and the largest country to prohibit wide categories of cryptocurrency use is China.
  
