--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -101,7 +101,7 @@ Concretely, our key contributions are:
 	\item \textbf{Leveraging grounded theory to analyze industrial literature while limiting research bias and separating hype from sound technical details.}
 	While there are significant benefits to analyzing industrial literature, there is also a significant amount of hype and imprecise language.
 	To address these limitations, we leveraged the grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions we identified while remaining grounded in the data we analyzed.
+	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we can answer the three questions we identified while remaining grounded in the data we analyzed.
 	We were also able to shed light on industry's understandings and misunderstandings of Blockchain technology. 
 	
 	
