--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -87,7 +87,7 @@ In particular, reviewers made sure to code the following four concepts found in 
 \end{itemize}
 
 At this stage of the grounded theory process, reviewers were instructed to avoid evaluating the validity of the coded concepts.
-Instead, every attempt was to made to include all possible codes, helping to ensure that our results were grounded in the data and not reviewers' biases.
+Instead, every attempt was made to include all possible codes, helping to ensure that our results were grounded in the data and not reviewers' biases.
 
 The reviewers continued reviewing documents until each felt that the last 3--5 documents they had read had no concepts that had not already been brought up by previous documents.
 This is a commonly accepted stopping criteria in grounded theory and is indicative that all core (i.e., not truly one-off) ideas have been discovered.
@@ -96,7 +96,7 @@ In total, this stage resulted in the creation of 641 codes.
 \subsubsection{Stage 2---Axial Coding}
 In the second stage, our research team used the constant comparative method to group codes into concepts.
 Specifically, we collapsed distinct codes referring to the same topic (e.g., one was an open code, the other in situ) into a single code, reducing the original set of 641 codes to a more manageable 68 concepts.
-As needed, we referred back to the original documents to ensure that our understanding of the code was fresh, and that we were assigning it to the appropriate concept.
+As needed, we referred to the original documents to ensure that our understanding of the code was fresh, and that we were assigning it to the appropriate concept.
 Also, at this stage we continued to avoid evaluating the validity of concepts, ensuring that the ideas of the reviewed documents were fully reflected in the codes.
 
 \textit{Interlude---Additional Open Coding.}
@@ -105,7 +105,7 @@ These documents were all blog posts, representing the most up-to-date thinking o
 In this process, no new codes were discovered, indicating that our process had produced concepts that thoroughly describe Blockchain technology.
 
 \subsubsection{Stage 3---Selective Coding}
-In the third stage, two researchers transfered all of the concepts related to technical properties and applications onto sticky-notes.
+In the third stage, two researchers transferred the concepts related to technical properties and applications onto sticky-notes.
 They then drew connecting lines between these concepts, describing how they related to one another.
 Based on these interconnections, concepts were divided into five different categories:
 
@@ -126,7 +126,7 @@ Based on these interconnections, concepts were divided into five different categ
 	\item \emph{Normative properties (Figure~\ref{fig:normative-properties}).}
 	Normative properties represent what people hope to achieve using Blockchain technology. 
 	Importantly, these properties are not provided by the use of Blockchain technology---as are the technical properties and capabilities---but instead require the careful designs of larger systems that might only use Blockchain technology as a small piece of the overall system.
-	In general, normative properties strongly relate to the hype sorrounding Blockchain technology.
+	In general, normative properties strongly relate to the hype surrounding Blockchain technology.
 	Examples include public participation, trustlessness, and censorship resistance.
 		
 \end{itemize}
@@ -150,7 +150,7 @@ In both of these situations, our research notes kept track of what was explicitl
 In the fourth and final stage, we used the concepts, categories, and connections derived from the first three stages of our grounded theory, along with our research notes and researcher expertises to derive several theories (i.e., research results from our analysis) regarding Blockchain technology.
 First, we subdivided the technical properties into three categories that give a high-level description of what Blockchain technology is (see Section~\ref{sec:blockchain}).
 Second, we extracted Blockchain technology's capabilities (Section~\ref{sec:capabilities}), related challenges (Section~\ref{sec:challenges}), and use cases (Section~\ref{sec:use-cases}).
-Third, we found that there is a clean split between Blokchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
+Third, we found that there is a clean split between Blockchain technology's technological primitives and its normative properties (i.e., hype) (see Section~\ref{sec:normative}).
 %Third, we described how Blockchain technology differs from other distributed technologies (see Appendix~\ref{sec:distributed-comparison}) and identified criteria that help determine whether a given problem can benefit from the use of Blockchain technology (see Section~\ref{sec:should-i-use-it}).
 
 \subsection{Limitations / Research Artifacts}
