--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -99,7 +99,7 @@ Due to its decentralized nature, Blockchain is potentially vulnerable to a numbe
 Additionally, Blockchain technology is vulnerable to traditional network attacks such as denial of service or partitioning.  Such attacks can aim to lower the number of participating miners or to fracture the network of miners to prevent consensus, lower the bar for 51\% attacks, or create an inconsistent state.
 
 \subsection{Privacy and anonymity}
-Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.  By default, all data on the ledger is public in order to enable verification by all miners.  But this means that any sensitive data is inherently non-private. If confidentiality is needed, it will be necessary to either host a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that will allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption). Still, the use of cryptography will limit the auditability and thus the ability to have meaningful shared governance.
+Another major challenge is how to protect the privacy of the users and data stored on a Blockchain ledger.  In basic implementations, data on the ledger is public in order to enable verification by all miners.  But this means that any sensitive data is inherently non-private. If confidentiality is needed, it will be necessary to either host a Blockchain system where only trusted entities can access it or by applying advanced cryptographic techniques that will allow miners to verify the correctness of encrypted transactions (e.g., multi-party computation, functional encryption). Still, the use of cryptography will limit the auditability and thus the ability to have meaningful shared governance.
 
 Additionally, extreme care must be taken when trying to build an anonymous Blockchain system.
 While many existing Blockchain systems provide a notion of ``pseudonymity'' in which users are identified by their cryptographic keys instead of by their names or social security numbers, it has been shown that this is not enough to provide true anonymity as attacks that correlate transactions by the same pseudonyms together with other data external to the Blockchain system can effectively deanonymize users~\cite{DBLP:journals/corr/abs-1708-04748}.
