--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -99,8 +99,8 @@ Specifically, we collapsed distinct codes referring to the same topic (e.g., one
 As needed, we referred to the original documents to ensure that our understanding of the code was fresh, and that we were assigning it to the appropriate concept.
 Also, at this stage we continued to avoid evaluating the validity of concepts, ensuring that the ideas of the reviewed documents were fully reflected in the codes.
 
-\textit{Interlude---Additional Open Coding.}
-After completing axial coding, one reviewer coded (i.e., open coding) another 28 documents.
+\subsubsection{Interlude---Additional Open Coding.}
+After completing axial coding, one reviewer coded (i.e., open coding) another 28 documents (giving the total of 132 documents).
 These documents were all blog posts, representing the most up-to-date thinking on Blockchain technology.
 In this process, no new codes were discovered, indicating that our process had produced concepts that thoroughly describe Blockchain technology.
 
