--- a/paper/sections/discussion.tex
+++ b/paper/sections/discussion.tex
@@ -41,11 +41,12 @@ The fact that this separation occurred naturally provides evidence that grounded
 
 \subsection{Private Governance}
 \label{sec:private-blockchain}
-In our survey of the industrial literature, we encountered several proposals for Blockchain technology that used a centralized governance model where all miners are controlled by a single entity.
-The most prominent example of a private governance system is IBM's HyperLedger Fabric.
-Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM run all of the miners.
+In our survey of the industrial literature, we encountered several proposals for Blockchain-as-a-Service.
+While such services often use true Blockchain protocols, they also use a centralized governance model where all miners are controlled by a single entity (i.e., private governance).
+%The most prominent example of a private governance system is IBM's deployment of HyperLedger Fabric.
+%Interestingly, the HyperLedger Fabric software project allows for consortium governance, but IBM's implementation has IBM run all of the miners.
 
-Ultimately, we do not classify such systems as Blockchain technology.
+We do not classify such systems as Blockchain technology.
 First, these systems do not neither shared governance nor shared operation, which we identify as the key component of Blockchain technology.
 Second, the entity operating the system still represents a single-point of failure.
 While the miners within the operating organization might be run on a distributed infrastructure, there is still a high chance that a compromise in the operating organization would lead to a compromise in the Blockchain system.
